--- a/webconfig/views/rule/show.ejs
+++ b/webconfig/views/rule/show.ejs
@@ -7,11 +7,11 @@
 <body>
 <h1><%= rule.domain %></h1>
 <ul>
-<li>ID: <%= rule.id %></li>
+<li>ID: driller:<%= rule.domain %>:<%= rule.alias %></li>
 <li>URL pattern: <%= rule.url_pattern %></li>
 <li>encoding: <%= rule.encoding %></li>
 </ul>
-<form method="POST" action="/rule/<%= rule.id %>"
+<form method="POST" action="/rule/driller:<%= rule.domain %>:<%= rule.alias %>"
 enctype="application/x-www-form-urlencoded">
 
  <input type="hidden" value="delete" name="_method" />
