--- a/webconfig/views/rule/index.ejs
+++ b/webconfig/views/rule/index.ejs
@@ -25,25 +25,27 @@
   <tbody>
     <tr>
       <th>ID</th>
-      <th>domain</th>
-      <th>alias</th>
       <th>active</th>
-      <th>extract content</th>
-      <th>type</th>
+      <th>save content</th>
+      <th>page logic</th>
+      <th>handle js</th>
       <th>priority</th>
       <th>weight</th>
+      <th>schedule interval</th>
+      <th>last schedule</th>
       <th>action</th>
     </tr>
     <% session.list.forEach(function(rule){ %>
        <tr>
        <td><%= rule.id %></td>
-       <td><%= rule.domain %></td>
-       <td><%= rule.alias %></td>
        <td><%= rule.active %></td>
        <td><%= rule.save_page %></td>
        <td><%= rule.type %></td>
+       <td><%= rule.jshandle %></td>
        <td><%= rule.priority %></td>
        <td><%= rule.weight %></td>
+       <td><%= rule.schedule_interval %></td>
+       <td><%=: new Date(parseInt(rule.first_schedule)) | localDate:'yyyy-MM-dd hh:mm:ss.S' %></td>
        <td><a href="/rule/driller:<%= rule.domain %>:<%= rule.alias %>/edit">Edit</a>&nbsp;
           <a href="/rule/driller:<%= rule.domain %>:<%= rule.alias %>">Delete</a></td>
        </tr>
