fix ssdb connect bug, proxy setting in driller rule

--- a/webconfig/views/rule/index.ejs
+++ b/webconfig/views/rule/index.ejs
@@ -27,6 +27,7 @@
       <th>ID</th>
       <th>active</th>
       <th>save content</th>
+      <th>use proxy</th>
       <th>page logic</th>
       <th>handle js</th>
       <th>priority</th>
@@ -40,6 +41,7 @@
        <td><%= rule.id %></td>
        <td><%= rule.active %></td>
        <td><%= rule.save_page %></td>
+       <td><%= rule.use_proxy %></td>
        <td><%= rule.type %></td>
        <td><%= rule.jshandle %></td>
        <td><%= rule.priority %></td>
