crawling report web ui

--- a/webconfig/views/index.ejs
+++ b/webconfig/views/index.ejs
@@ -8,5 +8,5 @@
 <hr style="width: 100%; height: 2px;">
 <h1><a href="/rule">Drilling Rules</a></h1>
 <h1><a href="/proxy">Proxy Server</a><br></h1>
-<h1><a href="/monitor">Crawling monitor</a><br></h1>
+<h1><a href="/monitor/daily">Crawling Report</a><br></h1>
 </body>
