link db info web ui

--- a/webconfig/views/index.ejs
+++ b/webconfig/views/index.ejs
@@ -9,4 +9,6 @@
 <h1><a href="/rule">Drilling Rules</a></h1>
 <h1><a href="/proxy">Proxy Server</a><br></h1>
 <h1><a href="/monitor/daily">Crawling Report</a><br></h1>
+<h1><a href="/monitor/linkdb">Link DB State</a><br></h1>
 </body>
+</html>
