--- a/webconfig/views/index.ejs
+++ b/webconfig/views/index.ejs
@@ -3,12 +3,12 @@
 <title><%= title %></title>
 </head>
 <body>
-<h1><%= title %></title>
-<p>This page is designed to manage drilling rules and proxy server.</p>
+<h1>Neocrawler Config Home</h1>
+<p>This page is designed to manage crawling rules and proxy server. <a href="http://git.oschina.net/dreamidea/neocrawler/wikis/home" target="_blank">Wiki</a></p>
 <hr style="width: 100%; height: 2px;">
-<h1><a href="/rule">Drilling Rules</a></h1>
-<h1><a href="/proxy">Proxy Server</a><br></h1>
-<h1><a href="/monitor/daily">Crawling Report</a><br></h1>
-<h1><a href="/monitor/linkdb">Link DB State</a><br></h1>
+<h4><a href="/rule">Crawling Rules Configure</a></h4>
+<h4><a href="/proxy">Proxy Configure</a><br></h4>
+<h4><a href="/monitor/daily">Crawling Daily Report</a><br></h4>
+<h4><a href="/monitor/linkdb">Link DB State</a><br></h4>
 </body>
 </html>
